--- a/config/west.yml
+++ b/config/west.yml
@@ -12,8 +12,8 @@ manifest:
       url-base: https://github.com/JoMa388
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      remote: urob
+      revision: v0.2+fix-child-nodes
       import: app/west.yml
     - name: prospector-zmk-module
       remote: carrefinho
