--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -51,7 +51,7 @@ ZMK_COMBO(lpar,        &lpar_lt,       RM1 RM2,    BASE NAV NUM, COMBO_TERM_SLOW
 ZMK_COMBO(rpar,        &rpar_gt,       RM2 RM3,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Bottom */ 
-ZMK_COMBO(rclk,        &trans,         LB3 LB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(mb5,         &mkp MB5,         LB3 LB2,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(mouse,       &smart_mouse,   LB2 LB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(mb4,         &mkp MB4,       LB1 LB0,    BASE NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(rb01,        &trans,         RB0 RB1,    BASE NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
