--- a/build.yaml
+++ b/build.yaml
@@ -6,9 +6,9 @@ include:
   - board: seeeduino_xiao_ble
     shield: totem_right
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-    artifact-name: split-dongle-left
+    artifact-name: split-dongle-right
   - board: seeeduino_xiao_ble
-    shield: totem_dongle dongle-screen
+    shield: totem_dongle dongle_screen
     artifact-name: totem-dongle-screen
   - board: seeeduino_xiao_ble
     shield: settings_reset
