--- a/build.yaml
+++ b/build.yaml
@@ -9,6 +9,8 @@ include:
     artifact-name: split-dongle-right
   - board: seeeduino_xiao_ble
     shield: totem_dongle dongle_screen
+    cmake-args: -DCONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
+    snippet: zmk-usb-logging
     artifact-name: totem-dongle-screen
   - board: seeeduino_xiao_ble
     shield: settings_reset
