--- a/config/west.yml
+++ b/config/west.yml
@@ -14,8 +14,8 @@ manifest:
       url-base: https://github.com/JoMa388
   projects:
     - name: zmk
-      remote: urob
-      revision: v0.2+fix-child-nodes
+      remote: zmkfirmware
+      revision: main
       import: app/west.yml
     - name: zmk-dongle-screen
       remote: janpfischer
