--- a/config/west.yml
+++ b/config/west.yml
@@ -17,6 +17,9 @@ manifest:
       remote: zmkfirmware
       revision: main
       import: app/west.yml
+    - name: zmk
+      remote: urob
+      revision: v0.2+fix-child-nodes
     - name: zmk-dongle-screen
       remote: janpfischer
       revision: main
