--- a/config/west.yml
+++ b/config/west.yml
@@ -16,9 +16,6 @@ manifest:
     - name: zmk
       remote: zmkfirmware
       revision: main
-    - name: zmk
-      remote: urob
-      revision: v0.2+fix-child-nodes
       import: app/west.yml
     - name: zmk-dongle-screen
       remote: janpfischer
@@ -40,6 +37,6 @@ manifest:
       revision: main
     - name: zmk-leader-key
       remote: urob
-      revision: v0.2
+      revision: main
   self:
     path: config
