--- a/config/west.yml
+++ b/config/west.yml
@@ -15,7 +15,7 @@ manifest:
   projects:
     - name: zmk
       remote: urob
-      revision: main
+      revision: v0.2+fix-child-nodes
       import: app/west.yml
     - name: zmk-dongle-screen
       remote: janpfischer
