--- a/config/west.yml
+++ b/config/west.yml
@@ -14,12 +14,12 @@ manifest:
       url-base: https://github.com/JoMa388
   projects:
     - name: zmk
-      remote: urob
-      revision: v0.2+fix-child-nodes
+      remote: main
+      revision: 147c340c6e8d377304acfdd64dc86cf83ebdfef2
       import: app/west.yml
     - name: zmk-dongle-screen
       remote: janpfischer
-      revision: 147c340c6e8d377304acfdd64dc86cf83ebdfef2
+      revision: main
     - name: zmk-auto-layer
       remote: urob
       revision: main
