--- a/config/west.yml
+++ b/config/west.yml
@@ -14,8 +14,8 @@ manifest:
       url-base: https://github.com/JoMa388
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: 147c340c6e8d377304acfdd64dc86cf83ebdfef2
+      remote: urob
+      revision: v0.2+fix-child-nodes
       import: app/west.yml
     - name: zmk-dongle-screen
       remote: janpfischer
@@ -37,6 +37,6 @@ manifest:
       revision: main
     - name: zmk-leader-key
       remote: urob
-      revision: legacy
+      revision: main
   self:
     path: config
