--- a/config/west.yml
+++ b/config/west.yml
@@ -2,10 +2,8 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    # - name: carrefinho
-    #   url-base: https://github.com/carrefinho
-    - name: janpfischer
-      url-base: https://github.com/janpfischer
+    - name: carrefinho
+      url-base: https://github.com/carrefinho
     - name: urob
       url-base: https://github.com/urob
     - name: dhruvinsh
@@ -14,11 +12,11 @@ manifest:
       url-base: https://github.com/JoMa388
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      remote: urob
+      revision: v0.2+fix-child-nodes
       import: app/west.yml
-    - name: zmk-dongle-screen
-      remote: janpfischer
+    - name: prospector-zmk-module
+      remote: carrefinho
       revision: main
     - name: zmk-auto-layer
       remote: urob
@@ -37,6 +35,6 @@ manifest:
       revision: main
     - name: zmk-leader-key
       remote: urob
-      revision: main
+      revision: v0.2
   self:
     path: config
