--- a/config/west.yml
+++ b/config/west.yml
@@ -2,8 +2,8 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: Bukharovi
-      url-base: https://github.com/Bukharovi
+    - name: carrefinho
+      url-base: https://github.com/carrefinho
     - name: urob
       url-base: https://github.com/urob
     - name: dhruvinsh
@@ -16,7 +16,7 @@ manifest:
       revision: v0.2+fix-child-nodes
       import: app/west.yml
     - name: prospector-zmk-module
-      remote: Bukharovi
+      remote: carrefinho
       revision: main
     - name: zmk-auto-layer
       remote: urob
