--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -31,10 +31,10 @@ ZMK_COMBO(lbkt,        &kp LBKT,       LM1 LB1,    WIN MAC NAV	  , COMBO_TERM_FA
 ZMK_COMBO(mk5,         &mkp MB5,       LM3 LB3,    NUM			  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(mk4,         &mkp MB4,       LM2 LB2,    NUM			  , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(mk3,         &mkp MB3,       LM1 LB1,    NUM  	      , COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(tilde,       &kp TILDE,      LM0 LB0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(grave,       &kp GRAVE,      RM0 RB0,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(lparlbrc,    &lparlbrc,      RM1 RB1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rparrbrc,    &rparrbrc,      RM2 RB2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(cpp,         &kp C_PP,       LM0 LB0,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(pipe,        &kp PIPE,       RM0 RB0,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(lpar,		   &kp LPAR,       RM1 RB1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rpar,        &kp RPAR,       RM2 RB2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(fslh,        &kp FSLH,       RM3 RB3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Top */ 
@@ -48,19 +48,19 @@ ZMK_COMBO(caret,       &kp CARET,      RT1 RT2,    WIN MAC NAV NUM, COMBO_TERM_S
 ZMK_COMBO(volup,       &kp C_VOL_UP,   RT2 RT3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Middle */ 
-ZMK_COMBO(lm32,        &trans,         LM3 LM2,    WIN MAC NAV ,    COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(lm21,        &trans,         LM2 LM1,    WIN MAC NAV ,    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(tilde,       &kp TILDE,      LM3 LM2,    WIN MAC NAV ,    COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(grave,       &kp GRAVE,      LM2 LM1,    WIN MAC NAV ,    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(tab,         &kp TAB,        LM1 LM0,    WIN MAC NAV ,    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(minus,       &kp MINUS,      RM0 RM1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(qexcl,       &qexcl,         RM1 RM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(pipe,        &kp PIPE,       RM2 RM3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rm23,        &trans,         RM2 RM3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Horizontal  Bottom */
 ZMK_COMBO(win_cut,     &kp LC(X),      LB3 LB2,    WIN ,			COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(win_copy,    &kp LC(INS),    LB2 LB1,    WIN ,            COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(win_paste,   &kp LS(INS),    LB1 LB0,    WIN ,			COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(mac_cut,     &kp LG(X),      LB3 LB2,    MAC ,			COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mac_copy,    &kp LC(INS),    LB2 LB1,    MAC ,            COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(mac_copy,    &kp LG(C),      LB2 LB1,    MAC ,            COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(mac_paste,   &kp LG(V),      LB1 LB0,    MAC ,			COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(under,       &kp UNDER,      RB0 RB1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(lbrc,        &kp LBRC,       RB1 RB2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
